--- a/src/docs/asciidoc/techno.adoc
+++ b/src/docs/asciidoc/techno.adoc
@@ -41,7 +41,7 @@ NOTE: https://docs.oracle.com/en/java/javase/14/docs/specs/man/index.html[JDK To
 
 NOTE: https://docs.oracle.com/javase/tutorial/getStarted/intro/definition.html[About the Java Technology]
 
-== Compilation en ligne de commande (JDK)
+=== Compilation en ligne de commande (JDK)
 .Le compilateur https://docs.oracle.com/en/java/javase/14/docs/specs/man/javac.html[`javac`] génère le _bytecode_ en ligne de commande.
 [source,bash,indent=0]
 ----
@@ -49,6 +49,7 @@ $ javac <options> <fichiers source>
 ----
 
 .Quelques options importantes
+[horizontal]
 `--class-path`|`-classpath`|`-cp`:: fixe le chemin de recherche des classes compilées (_Classpath_)
 `-d`:: fixe le répertoire de destination pour les classes compilées
 `-encoding`:: précise l'encodage des fichiers sources ("UTF-8", ...)
@@ -76,7 +77,7 @@ $ javac -sourcepath src \ #<1>
 
 NOTE: https://docs.oracle.com/en/java/javase/14/docs/specs/man/javac.html[The javac Command]
 
-== Exécution en ligne de commande (JRE)
+=== Exécution en ligne de commande (JRE)
 .https://docs.oracle.com/en/java/javase/14/docs/specs/man/java.html[`java`] permet d'exécuter le programme
 [source,bash,indent=0]
 ----
@@ -85,6 +86,7 @@ $ java [-options] -jar jarfile [args...]
 ----
 
 .Quelques options importantes
+[horizontal]
 `class`:: le nom de la classe contenant le programme principal (le `.class` doit pouvoir être trouvé dans le _CLASSPATH_)
 `--class-path`|`-classpath`|`-cp`:: fixe le chemin de recherche des classes compilées
 `-jar`:: exécute un programme encapsulé dans un fichier `jar`
@@ -108,12 +110,16 @@ NOTE: https://docs.oracle.com/en/java/javase/14/docs/specs/man/java.html[The jav
 NOTE: https://docs.oracle.com/javase/tutorial/essential/environment/paths.html[PATH and CLASSPATH] et https://docs.oracle.com/javase/specs/jls/se14/html/jls-12.html[Execution]
 
 == Les indispensables pour développer en Java
+[TIP]
+====
 * Adopter un _style de codage_ comme le https://google.github.io/styleguide/javaguide.html[Google Java Style Guide] et vérifier les violations avec https://checkstyle.sourceforge.io/[Checkstyle]
 * Utiliser un _système de gestion de versions_ (https://git-scm.com/[git]) et une _forge logicielle_ (https://github.com/[github], https://bitbucket.org/[bitbucket], https://gitlab.com/[gitlab])
 * Faire des _tests unitaires_ (https://junit.org/junit5/[JUnit])
 * Automatiser les tâches répétitives (https://maven.apache.org/[Maven], https://gradle.org/[Gradle])
+====
 
-== Webographie
+== Références
+=== Webographie
 * https://docs.oracle.com/en/java/javase/index.html[Java Platform, Standard Edition Documentation]
 * https://docs.oracle.com/en/java/javase/15/docs/api/index.html[Java API]
 * http://docs.oracle.com/javase/tutorial/[_The Java Tutorials_]
@@ -123,12 +129,11 @@ https://www.azul.com/files/12992683-dzone-refcard318-java13-v2.pdf[Java 13],
 https://www.azul.com/files/13301143-dzone-refcard-318-java-14-v2.pdf[Java 14]
 * https://blog.jetbrains.com/?s=Java+Annotated+Monthly[Java Annotated Monthly] (blog)
 
-== Bibliographie
-=== Apprentissage
+=== Bibliographie (apprentissage)
 * *David J. Barnes & Michael Kölling*. http://www.bluej.org/objects-first/[_Objects First with Java_].  Pearson. 2016.
 * *Marc Loy, Patrick Niemeyer, Daniel Leuck*, https://www.oreilly.com/library/view/learning-java-5th/9781492056263/[Learning Java: An Introduction to Real-world Programming With Java]. O'Reilly Media. 2020.
 
-=== Perfectionnement
+=== Bibliographie (Perfectionnement)
 * *Joshua Bloch*. _Effective Java 3rd Edition_. Addison-Wesley Professional. 2017.
 * *Kevlin Henney & Trisha Gee*, https://www.oreilly.com/library/view/97-things-every/9781491952689/[97 Things Every Java Programmer Should Know]. 2020.
 * *Joshua Bloch & Neal Gafter*. http://www.javapuzzlers.com/[_Java Puzzlers_].  Addison-Wesley. 2005.
