--- a/src/docs/asciidoc/class.adoc
+++ b/src/docs/asciidoc/class.adoc
@@ -336,7 +336,7 @@ En effet, en https://fr.wikipedia.org/wiki/Programmation_orient%C3%A9e_objet[pro
 ** `values()` retourne un tableau contenant les constantes dans l'ordre de leur déclaration
 ** un type énuméré hérite implicitement de la classe https://docs.oracle.com/en/java/javase/14/docs/api/java.base/java/lang/Enum.html[`Enum`]
 
-NOTE: Plus d'information dans le tutoriel https://docs.oracle.com/javase/tutorial/java/javaOO/enum.html[The Java Tutorials - Enum Types] ou dans la section https://docs.oracle.com/javase/specs/jls/se14/html/jls-8.html#jls-8.9[8.9. Enum Types] de la spécification du langage.
+NOTE: Plus d'information dans le tutoriel https://docs.oracle.com/javase/tutorial/java/javaOO/enum.html[The Java Tutorials - Enum Types] ou dans la section {jlsurl}/jls-8.html#jls-8.9[8.9. Enum Types] de la spécification du langage.
 
 .Exemple : un singleton pour le programme principal
 [source,java,indent=0]
