--- a/src/docs/asciidoc/techno.adoc
+++ b/src/docs/asciidoc/techno.adoc
@@ -107,7 +107,7 @@ NOTE: https://docs.oracle.com/en/java/javase/14/docs/specs/man/java.html[The jav
 * Le compilateur et la machine virtuelle ont besoin d'avoir accès aux classes compilées
 * Il peut être défini en ligne de commande ou par la variable d'environnement `CLASSPATH`
 
-NOTE: https://docs.oracle.com/javase/tutorial/essential/environment/paths.html[PATH and CLASSPATH] et https://docs.oracle.com/javase/specs/jls/se14/html/jls-12.html[Execution]
+NOTE: https://docs.oracle.com/javase/tutorial/essential/environment/paths.html[PATH and CLASSPATH] et {jlsurl}/jls-12.html[Execution]
 
 == Les indispensables pour développer en Java
 [TIP]
